crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__component_environment_simple_end.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\begin{document}\n\\end{\n     |\"#)"
---
[
  {
    "label": "abstract",
    "detail": "built-in",
    "preselect": false
  },
  {
    "label": "array",
    "detail": "built-in",
    "preselect": false
  },
  {
    "label": "center",
    "detail": "built-in",
    "preselect": false
  },
  {
    "label": "csname",
    "detail": "built-in",
    "preselect": false
  },
  {
    "label": "document",
    "detail": "built-in",
    "preselect": true
  }
]
