crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__entry_type_after_preamble.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.bib\n@preamble{\n         |\n ^^^^^^^^\"#)"
---
[
  {
    "label": "preamble",
    "preselect": false
  }
]
