crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__entry_type_after_string.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.bib\n@string{\n       |\n ^^^^^^\"#)"
---
[
  {
    "label": "string",
    "preselect": false
  }
]
