crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__entry_type_at_empty.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.bib\n@\n |\"#)"
---
[
  {
    "label": "article",
    "preselect": false
  },
  {
    "label": "artwork",
    "preselect": false
  },
  {
    "label": "audio",
    "preselect": false
  },
  {
    "label": "bibnote",
    "preselect": false
  },
  {
    "label": "book",
    "preselect": false
  }
]
