crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__field_entry_field_name.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.bib\n@article{foo, a\n               |\n              ^\"#)"
---
[
  {
    "label": "abstract",
    "preselect": false
  },
  {
    "label": "addendum",
    "preselect": false
  },
  {
    "label": "address",
    "preselect": false
  },
  {
    "label": "afterword",
    "preselect": false
  },
  {
    "label": "annotation",
    "preselect": false
  }
]
