crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__import_class_open_brace.snap
---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\documentclass{art \\foo\n                |\n               ^^^\"#)"
---
[
  {
    "label": "article",
    "preselect": false
  },
  {
    "label": "articleingud",
    "preselect": false
  },
  {
    "label": "articoletteracdp",
    "preselect": false
  },
  {
    "label": "artikel1",
    "preselect": false
  },
  {
    "label": "artikel2",
    "preselect": false
  }
]
