crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__issue_864.snap
---
source: crates/texlab/tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! bug.tex\n\\documentclass{article}\n\\def\\あいうえお{}\n\\begin{document}\n\\あ\n  |\n ^\n\\end{document}\"#)"
---
[
  {
    "label": "あいうえお",
    "detail": "user-defined",
    "preselect": false
  }
]
