crates/texlab/tests/lsp/text_document/snapshots/lsp__text_document__completion__issue_883.snap
---
source: crates/texlab/tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! bug.tex\n\\begin{doc\n          |\n       ^^^\n% Comment\"#)"
---
[
  {
    "label": "document",
    "detail": "built-in",
    "preselect": false
  }
]
